fixed all spots style where bottom row would be behind footer

--- a/frontend/src/components/Spots/spots.css
+++ b/frontend/src/components/Spots/spots.css
@@ -3,7 +3,8 @@
     padding-right: 40px;
     padding-left: 40px;
     display: grid;
-    grid-template-columns: repeat(3, 1fr);
+    /* grid-template-columns: repeat(3, 1fr); */
+    grid-template-columns: repeat(auto-fit, minmax(300px,1fr));
     grid-gap: 1rem;
     background-color: white;
     height: 100%;
